--- a/HTML-CSS-afternoonProject/afternoon.html
+++ b/HTML-CSS-afternoonProject/afternoon.html
@@ -29,8 +29,6 @@
         <h2 class='h2'>The Design Better library now available as free audiobooks.</h2>
         <div class='get-audiobooks'>GET AUDIOBOOKS</div>
     </div>
-    <div class='main2'>
-        <h1 class='h1-2'>`</h1>
-    </div>
+    <div class='main2'></div>
 </body>
 </html>
